# tp-rigtoolkit-houdini

./: .gitignore  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
tp/rigtoolkit/houdini/: __version__.py  _version.py
tp/rigtoolkit/startup/: rigtoolkithoudini.py
